[*] fix dots overflow

--- a/src/components/form/styles/login-page.scss
+++ b/src/components/form/styles/login-page.scss
@@ -86,3 +86,8 @@
         }
     }
 }
+
+
+.login-form {
+    padding: 30px 0;
+}
